# libmaple_micro

./: .gitignore  CMakeLists.txt  Makefile  arm-cm3.cmake  libnumcalcium.h  main.c  main.cpp  test.json  upload.sh
armtest/: Makefile  f103c8.ld  f103c8_vector.c  firmware.elf  main.c  output.map
armtest_fnram/: .gitignore  Makefile  common.h  crash.c  crash.h  f103c8.ld  f103c8_cart.ld  f103c8_loader.ld  f103c8_stdlib.c  f103c8_vector.c  firmware.dis  firmware.elf  firmware.nm  hexdump  libnumcalcium.h  loader.c  main.c  output.map  upload_win.ps1
armtest_fnram/cart/: Makefile  main.c
baremetalembedded-master/: final.elf  final.map
example/: CMakeLists.txt  Makefile  f103c8_vector.c  libnumcalcium.h  loader.c  main.c
example/cart/: Makefile  main.c
libnumcalcium/: CMakeLists.txt  build_cmake_gnu.sh  libnumcalcium.h
libnumcalcium/ld/: f103c8_cart.ld  f103c8_loader.ld
libnumcalcium/libmaple/: CMakeLists.txt
libnumcalcium/libmaple/stm32f1/: rules.mk
libnumcalcium/src/: f103c8_crash.c  f103c8_loader.c  f103c8_stdlib.c  f103c8_vector.c
src/: f103c8_cart.ld  f103c8_loader.c  f103c8_loader.ld  f103c8_vector.c
util/: common.py  config.json  console.py  sideload_serial.py  stm32bootloader.py  upload_firmware.py
wirish/: boards.cpp
wirish/boards/maple/include/board/: board.h
wirish/stm32f1/: boards_setup.cpp
